# django-bridge

./: .eslintignore  .eslintrc.js  README.md  pyproject.toml
.github/workflows/: linting.yml  test.yml
python/: testmanage.py  tox.ini
python/django_bridge/: __init__.py  middleware.py  response.py  test.py  views.py
python/django_bridge/adapters/: forms.py  test_forms.py
python/django_bridge/templates/django_bridge/: bootstrap.html
python/testapp/: apps.py  settings.py
website/: docusaurus.config.ts
website/docs/: start.md  testing.md  views.md
website/src/pages/: index.tsx
