[tool.poetry]
name = "django-bridge-root"
version = "1.0"
description = ""
authors = ["Karl Hobley <karl@kaed.uk>"]
license = "BSD-3-Clause"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
twine = "^6.1.0"
wheel = "^0.42.0"
ruff = "^0.4.2"
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
